--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <title>Monster Raiser</title>
     <link rel="stylesheet" href="mainStyle.css">
-    <script src="./node_modules/two.js/build/two.js"></script>
+    <script src="node_modules/two.js/build/two.js"></script>
     <script src="./gameClasses.js" defer></script>
     <script src="./gameBase.js" defer></script>
   </head>
   
   <body onload="init()">
+    <img src="./assets/monsterMain.png" width="500px">
     <div id="gameArea">
 
       <!--<canvas id="gameScreen"></canvas>-->
