--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Monster Raiser</title>
     <link rel="stylesheet" href="mainStyle.css">
-    <script src="node_modules/two.js/build/two.js"></script>
+    <script src="./js/two.js"></script>
     <script src="./gameClasses.js" defer></script>
     <script src="./gameBase.js" defer></script>
   </head>
