Basic animations added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <button type="button" id="blue" class="color" value="#75C5CA" onclick="changeWallColor()">
       <button type="button" id="green" class="color" value="#A8DFA6" onclick="changeWallColor()">
       <button type="button" id="pink" class="color" value="#DFC1D7" onclick="changeWallColor()">
-      <button type="button" id="grey" class="color" value="#97A0A0" onclick="changeWallColor()">
+      <button type="button" id="grey" class="color" value="#EAEAEA" onclick="changeWallColor()">
     </div>
     <div id="gameArea">
 
