Game loop implemented with basic endings

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
       <!--<canvas id="gameScreen"></canvas>-->
     </div>
+    <input type="button" id="restart" value="RESTART" onclick="restart()">
     <div id="actionOptions">
       <input type="image" src="./assets/feed.png" class="action" id="feed" value="0" 
         onmouseover="this.src='./assets/feedHover.png'" onmouseout="this.src='./assets/feed.png'" onclick="updateStat()">
