--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
   <head>
     <meta charset="UTF-8">
     <title>Monster Raiser</title>
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Krub:wght@200;300;400;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="mainStyle.css">
     <script src="./js/two.js"></script>
     <script src="./gameClasses.js" defer></script>
     <script src="./gameBase.js" defer></script>
+
+    <link rel="shortcut icon" href="assets/monsterMain1.png" type="image/x-icon" />
   </head>
   
   <body onload="init()">
@@ -20,7 +27,12 @@
 
       <!--<canvas id="gameScreen"></canvas>-->
     </div>
-    <input type="button" id="restart" value="RESTART" onclick="restart()">
+    <section id="results">
+      <h2>Tester Monster</h2>
+      <br>
+      <p>Tester text explaining all of your actions and why they are bad or good</p>
+      <input type="button" id="restart" value="RESTART" onclick="restart()">
+    </section>
     <div id="actionOptions">
       <input type="image" src="./assets/feed.png" class="action" id="feed" value="0" 
         onmouseover="this.src='./assets/feedHover.png'" onmouseout="this.src='./assets/feed.png'" onclick="updateStat()">
